# Soroban_Cookbook_online

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LAUNCH_ANNOUNCEMENT.md  MOBILE_FIRST_INDEXING.md  PHASE_6_REVIEW.md  SECURITY.md  task.md  vercel.json
documentation/: .hintrc  cspell-custom-words.txt  cspell.json  docusaurus.config.ts  eslint.config.mjs  lighthouserc.js  (+6 more)
examples/: Cargo.toml
examples/access-control/: Cargo.toml
examples/access-control/src/: lib.rs
examples/access-control/test_snapshots/tests/: test_admin_can_call_admin_only_action.1.json  test_admin_can_grant_manager_role.1.json  test_constructor_grants_admin_role.1.json  test_has_role_helper_directly.1.json  test_manager_is_denied_admin_only_action.1.json  test_non_admin_cannot_grant_roles.1.json  test_non_admin_is_denied_admin_only_action.1.json  test_revoke_role_removes_access.1.json
examples/authorization/: Cargo.toml
examples/authorization/src/: lib.rs
examples/constant-product-amm/: Cargo.toml
examples/constant-product-amm/src/: lib.rs
examples/emergency-stop/: Cargo.toml
examples/emergency-stop/src/: lib.rs
examples/emergency-stop/test_snapshots/tests/: test_operations_succeed_when_unpaused.1.json  test_pause_blocks_operations.1.json  test_pause_requires_admin_auth.1.json  test_unpause_requires_admin_auth.1.json  test_unpause_restores_operations.1.json  test_unpaused_by_default.1.json
examples/error-handling/: Cargo.toml
examples/error-handling/src/: lib.rs
examples/htlc-swap/: Cargo.toml
examples/htlc-swap/src/: lib.rs
examples/simple-voting/src/: lib.rs
(+50 files in other folders)
